--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.535.0",
+    "parkingsystem-main": "file:..",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1"
